--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         .gradient-header {
             background: linear-gradient(90deg, #1e40af, #0d9488);
         }
+        .dropdown:hover .dropdown-menu {
+            display: block;
+        }
     </style>
 </head>
 <body class="bg-white scroll-smooth">
@@ -33,11 +36,17 @@
     </header>
 
     <nav class="bg-white shadow sticky top-0 z-10">
-        <div class="max-w-6SEPxl mx-auto px-4 py-4 flex justify-center space-x-6 md:space-x-10">
+        <div class="max-w-6xl mx-auto px-4 py-4 flex justify-center space-x-6 md:space-x-10">
             <a href="#about" class="text-gray-700 hover:text-teal-600 font-semibold">About</a>
             <a href="#skills" class="text-gray-700 hover:text-teal-600 font-semibold">Skills</a>
             <a href="#experience" class="text-gray-700 hover:text-teal-600 font-semibold">Experience</a>
             <a href="#certifications" class="text-gray-700 hover:text-teal-600 font-semibold">Certifications</a>
+            <div class="relative dropdown">
+                <button class="text-gray-700 hover:text-teal-600 font-semibold">Resources</button>
+                <div class="dropdown-menu hidden absolute bg-white shadow-lg rounded-md mt-2 py-2 w-48">
+                    <a href="https://github.com/your-username/ceh-notes/blob/main/ceh-notes.md" target="_blank" class="block px-4 py-2 text-gray-700 hover:bg-teal-100 hover:text-teal-600">CEH Notes</a>
+                </div>
+            </div>
             <a href="#contact" class="text-gray-700 hover:text-teal-600 font-semibold">Contact</a>
         </div>
     </nav>
@@ -149,9 +158,11 @@
         // Smooth scrolling for navigation links
         document.querySelectorAll('nav a').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                const section = document.querySelector(this.getAttribute('href'));
-                section.scrollIntoView({ behavior: 'smooth' });
+                if (!this.closest('.dropdown-menu')) {
+                    e.preventDefault();
+                    const section = document.querySelector(this.getAttribute('href'));
+                    section.scrollIntoView({ behavior: 'smooth' });
+                }
             });
         });
     </script>
