--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             z-index: 20;
         }
         @media (max-width: 768px) {
+            .dropdown .dropdown-menu {
+                display: none;
+            }
             .dropdown.active .dropdown-menu {
                 display: block;
                 opacity: 1;
@@ -62,178 +65,7 @@
             <a href="#certifications" class="text-gray-700 hover:text-teal-600 font-semibold">Certifications</a>
             <div class="relative dropdown">
                 <button class="text-gray-700 hover:text-teal-600 font-semibold" onclick="toggleDropdown(event)">Resources</button>
-                <div class="dropdown-menu bg-white shadow-lg rounded-md mt-1 py-2 w-48">
-                    <a href="https://github.com/your-username/ceh-notes/blob/main/ceh-notes.md" target="_blank" class="block px-4 py-2 text-gray-700 hover:bg-teal-100 hover:text-teal-600">CEH Notes</a>
-                </div>
-            </div>
-            <a href="#contact" class="text-gray-700 hover:text-teal-600 font-semibold">Contact</a>
-        </div>
-    </nav>
-
-    <main class="max-w-6xl mx-auto px-4 py-12">
-        <section id="about" class="mb-16">
-            <h2 class="text-3xl font-bold text-gray-800 border-b-2 border-teal-600 pb-2 mb-6">About Me</h2>
-            <p class="text-gray-600 leading-relaxed">
-                As a tech-savvy professional with a passion for cybersecurity, I bring hands-on IT expertise and extensive experience in providing top-notch technical support. With a focus on resolving complex issues and driving business success, I specialize in malware investigation, vulnerability assessment, and client communication to ensure secure and efficient systems.
-            </p>
-        </section>
-
-        <section id="skills" class="mb-16">
-            <h2 class="text-3xl font-bold text-gray-800 border-b-2 border-teal-600 pb-2 mb-6">Skills</h2>
-            <div class="flex flex-wrap gap-3">
-                <span class="bg-teal-100 text-teal-800 font-medium px-4 py-2 rounded-full">Cybersecurity</span>
-                <span class="bg-teal-100 text-teal-800 font-medium px-4 py-2 rounded-full">Technical Support</span>
-                <span class="bg-teal-100 text-teal-800 font-medium px-4 py-2 rounded-full">Malware Analysis</span>
-                <span class="bg-teal-100 text-teal-800 font-medium px-4 py-2 rounded-full">Vulnerability Assessment</span>
-                <span class="bg-teal-100 text-teal-800 font-medium px-4 py-2 rounded-full">Client Communication</span>
-                <span class="bg-teal-100 text-teal-800 font-medium px-4 py-2 rounded-full">AWS S3</span>
-                <span class="bg-teal-100 text-teal-800 font-medium px-4 py-2 rounded-full">Network Management</span>
-                <span class="bg-teal-100 text-teal-800 font-medium px-4 py-2 rounded-full">Data Recovery</span>
-                <span class="bg-teal-100 text-teal-800 font-medium px-4 py-2 rounded-full">SIEM Tools</span>
-                <span class="bg-teal-100 text-teal-800 font-medium px-4 py-2 rounded-full">Pentesting Tools</span>
-            </div>
-        </section>
-
-        <section id="experience" class="mb-16">
-            <h2 class="text-3xl font-bold text-gray-800 border-b-2 border-teal-600 pb-2 mb-6">Experience & Projects</h2>
-            <div class="grid gap-6 md:grid-cols-2">
-                <div class="card bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="text-xl font-semibold text-gray-800">Cybersecurity Analyst</h3>
-                    <p class="text-gray-500">Apr 2025 - Present</p>
-                    <p class="text-gray-600 mt-2">
-                        Conducting threat analysis, vulnerability assessments, and incident response to enhance organizational security posture. Leveraging SIEM tools and pentesting frameworks to identify and mitigate risks.
-                    </p>
-                </div>
-                <div class="card bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="text-xl font-semibold text-gray-800">Technical Support Specialist</h3>
-                    <p class="text-gray-500">Redblink Technologies, Mohali | Oct 2016 - Dec 2024</p>
-                    <p class="text-gray-600 mt-2">
-                        Investigated malware on WordPress sites using Wordfence, Sucuri, and VirusTotal. Conducted vulnerability scans with OpenVAS and Nessus, creating detailed remediation reports. Provided client support via Zendesk, resolving software and security issues.
-                    </p>
-                </div>
-                <div class="card bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="text-xl font-semibold text-gray-800">TINXSYS Support Engineer L2</h3>
-                    <p class="text-gray-500">Vayam Info Solutions Pvt Ltd, Panchkula | Apr 2015 - Aug 2016</p>
-                    <p class="text-gray-600 mt-2">
-                        Streamlined data migration to TINXSYS servers, ensuring data integrity. Managed 500+ endpoints and provided end-user support via Zendesk, optimizing server performance and stability.
-                    </p>
-                </div>
-                <div class="card bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="text-xl font-semibold text-gray-800">Hardware & Software Engineer</h3>
-                    <p class="text-gray-500">Comvia Computers, Ludhiana | Sep 2010 - May 2014</p>
-                    <p class="text-gray-600 mt-2">
-                        Managed hardware/software installations and data recovery across 550+ assets. Provided on-site and remote support for 200+ users, resolving complex issues and ensuring system security with WSUS and Symantec updates.
-                    </p>
-                </div>
-                <div class="card bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="text-xl font-semibold text-gray-800">Cybersecurity Intern</h3>
-                    <p class="text-gray-500">Center for Cyber Security Studies & Research | Jul 2024 - Oct 2024</p>
-                    <p class="text-gray-600 mt-2">
-                        Gained hands-on experience in cybersecurity practices, contributing to threat analysis and vulnerability assessments during internship.
-                    </p>
-                </div>
-            </div>
-        </section>
-
-        <section id="certifications" class="mb-16">
-            <h2 class="text-3xl font-bold text-gray-800 border-b-2 border-teal-600 pb-2 mb-6">Certifications</h2>
-            <ul class="list-disc pl-6 text-gray-600 space-y-2">
-                <li>CompTIA A+</li>
-                <li>CompTIA Security+</li>
-                <li>Certified Ethical Hacker (v13)</li>
-                <li>CompTIA PenTest+ (THM)</li>
-                <li>Jr Penetration Tester, THM</li>
-                <li>SOC Analyst, LetsDefend</li>
-                <li>Certified in Cybersecurity, ISC2</li>
-                <li>AWS Certified AI Practitioner</li>
-                <li>AWS Certified Cloud Practitioner</li>
-            </ul>
-        </section>
-
-        <section id="contact" class="mb-16">
-            <h2 class="text-3xl font-bold text-gray-800 border-b-2 border-teal-600 pb-2 mb-6">Contact</h2>
-            <div class="space-y-4">
-                <p class="text-gray-600">
-                    Location: Mohali, Punjab
-                </p>
-                <p class="text-gray-600">
-                    <a href="https://in.linkedin.com/in/bhartverma" target="_blank" class="inline-flex items-center text-teal-600 hover:underline">
-                        <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M19 0h-14c-2.761 0-5 2.239-5 прой
-
-System: I'm sorry, but it seems the artifact content was cut off. The HTML content is incomplete, missing the closing tags and part of the document. Could you please provide the complete `index.html` content or confirm if I should proceed with the provided partial content? Additionally, please provide your GitHub username so I can update the CEH Notes link with the correct URL (e.g., `https://github.com/your-username/ceh-notes/blob/main/ceh-notes.md`). This will ensure the link works correctly when you upload the file.
-
-For now, I’ll assume you want to proceed with the provided content and complete the missing parts logically, restoring the missing closing tags and ensuring the dropdown functionality works as requested. I’ll also leave the placeholder `your-username` in the CEH Notes link, which you’ll need to replace with your actual GitHub username before uploading.
-
-### Updated Portfolio HTML (Completed)
-I’ve restored the missing closing tags and ensured the dropdown opens on hover for desktop users, allowing direct clicks on the "CEH Notes" link. The JavaScript and CSS remain as described, with hover functionality for desktop and click-to-toggle for mobile.
-
-<xaiArtifact artifact_id="1b939e67-5668-453f-a2a7-ca867928504a" artifact_version_id="d789451e-68ea-4472-a6ac-f294fc16e1d7" title="Bhart Verma Portfolio Website" contentType="text/html">
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhart Verma - Cybersecurity Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-        .scroll-smooth {
-            scroll-behavior: smooth;
-        }
-        .card {
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
-        }
-        .gradient-header {
-            background: linear-gradient(90deg, #1e40af, #0d9488);
-        }
-        .dropdown:hover .dropdown-menu {
-            display: block;
-            opacity: 1;
-            transform: translateY(0);
-        }
-        .dropdown-menu {
-            display: none;
-            transition: opacity 0.2s ease, transform 0.2s ease;
-            opacity: 0;
-            transform: translateY(-10px);
-            position: absolute;
-            top: 100%;
-            left: 0;
-            z-index: 20;
-        }
-        @media (max-width: 768px) {
-            .dropdown.active .dropdown-menu {
-                display: block;
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-    </style>
-</head>
-<body class="bg-white scroll-smooth">
-    <header class="gradient-header text-white text-center py-16">
-        <h1 class="text-4xl md:text-5xl font-bold">Bhart Verma</h1>
-        <p class="mt-2 text-lg md:text-xl">Cybersecurity Specialist | Technical Support Expert</p>
-        <a href="https://in.linkedin.com/in/bhartverma" target="_blank" class="mt-4 inline-block bg-white text-teal-800 font-semibold py-2 px-4 rounded-lg hover:bg-teal-100 transition">Get in Touch</a>
-    </header>
-
-    <nav class="bg-white shadow sticky top-0 z-10">
-        <div class="max-w-6xl mx-auto px-4 py-4 flex justify-center space-x-6 md:space-x-10">
-            <a href="#about" class="text-gray-700 hover:text-teal-600 font-semibold">About</a>
-            <a href="#skills" class="text-gray-700 hover:text-teal-600 font-semibold">Skills</a>
-            <a href="#experience" class="text-gray-700 hover:text-teal-600 font-semibold">Experience</a>
-            <a href="#certifications" class="text-gray-700 hover:text-teal-600 font-semibold">Certifications</a>
-            <div class="relative dropdown">
-                <button class="text-gray-700 hover:text-teal-600 font-semibold" onclick="toggleDropdown(event)">Resources</button>
-                <div class="dropdown-menu bg-white shadow-lg rounded-md mt-1 py-2 w-48">
+                <div class="dropdown-menu bg-white shadow-lg rounded-md mt-0 py-2 w-48">
                     <a href="https://github.com/Bhart-Verma/ceh-notes/blob/main/ceh-notes.md" target="_blank" class="block px-4 py-2 text-gray-700 hover:bg-teal-100 hover:text-teal-600">CEH Notes</a>
                 </div>
             </div>
@@ -356,9 +188,8 @@ I’ve restored the missing closing tags and ensured the dropdown opens on hover
             });
         });
 
-        // Toggle dropdown on click for mobile
+        // Toggle dropdown on click for mobile/touch devices only
         function toggleDropdown(event) {
-            // Only toggle on touch devices or small screens
             if ('ontouchstart' in window || window.innerWidth <= 768) {
                 event.preventDefault();
                 const dropdown = event.target.closest('.dropdown');
@@ -366,11 +197,13 @@ I’ve restored the missing closing tags and ensured the dropdown opens on hover
             }
         }
 
-        // Close dropdown when clicking outside
+        // Close dropdown when clicking outside (mobile only)
         document.addEventListener('click', function(e) {
-            const dropdown = document.querySelector('.dropdown');
-            if (!dropdown.contains(e.target)) {
-                dropdown.classList.remove('active');
+            if ('ontouchstart' in window || window.innerWidth <= 768) {
+                const dropdown = document.querySelector('.dropdown');
+                if (!dropdown.contains(e.target)) {
+                    dropdown.classList.remove('active');
+                }
             }
         });
     </script>
